fix: reset-password require password
